Restore work-in-progress changes (cli, scan, packs)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Validate Dependabot config
+        run: |
+          ruby -e 'require "yaml"; config = YAML.load_file(".github/dependabot.yml"); puts "Dependabot config:"; puts config.inspect'
+
       - uses: dtolnay/rust-toolchain@nightly
         with:
           components: rustfmt, clippy
